<resources>
    <string name="app_name">QutebAppTest1</string>

    <!--    WELCOME1-->
    <string name="welcome1_welcome">WELCOME</string>
    <string name="welcome1_qutebapp_is">Qutebapp provides you all the tools necessary for you to manage and track your finances from your phone.</string>

    <!--    WELCOME2-->
    <string name="welcome2_we_got_you">WE GOT YOU</string>
    <string name="welcome2_we_pay_attention">We pay attention to all your payments and spending all in one place.</string>

    <!--    WELCOME3-->
    <string name="welcome3_zero_fees">ZERO FEES</string>
    <string name="welcome3_bank_your_life">Bank your life. We have created something new for you.</string>

    <!--    FORGOT YOUR PASSWORD-->
    <string name="fyp_forgot_your_password">Forgot your password?</string>
    <string name="fyp_enter_your_email">Enter your email below to retrieve your account.</string>
    <string name="fyp_send_reset_link">Send password reset link</string>

    <!--    ENTER VERIFICATION-->
    <string name="enter_verification_enter_verification">Enter Verification</string>
    <string name="enter_verification_verification_code">Verification Code</string>
    <string name="enter_verification_new_password">New Password</string>
    <string name="enter_verification_reset_password">Reset Password</string>

    <!--    LOGIN-->

    <string name="login_email">EMAIL ADDRESS</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_remember_me">REMEMBER ME</string>
    <string name="login_dont_have_an_account">DON\'T HAVE ACCOUNT?</string>
    <string name="login_sign_in">SIGN IN</string>
    <string name="login_sign_up">SIGN UP</string>
    <string name="login_forgot_password">Forgot password?</string>

    <!--    SIGNUP-->
    <string name="signup_create_an_account">Create an account</string>
    <string name="signup_your_first_name">Your First Name</string>
    <string name="signup_phone_number_email">Phone number/ Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_i_agree_to_terms">I AGREE TO TERMS AND CONDITIONS</string>
    <string name="signup_signup">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    SPENDING-->
    <string name="spending_dashboard">DASHBOARD</string>
    <string name="spending_cash_flow_type">Spending</string>
    <string name="spending_balance">Balance</string>
    <string name="spending_transactions">Transactions</string>

    <!--    INCOME-->
    <string name="income_dashboard">DASHBOARD</string>
    <string name="income_cash_flow_type">Income</string>
    <string name="income_balance">Balance</string>
    <string name="income_transactions">Transactions</string>

    <!--    MISCELLANEOUS-->
    <string name="birr_short">br</string>
    <string name="birr_long">birr</string>
    <string name="skip">Skip</string>

    <!--    CATEGORIES-->
    <string name="categories_categories">CATEGORIES</string>

    <string name="categories_spending">Spendings</string>
    <string name="categories_spending_entertainment">Entertainment</string>
    <string name="categories_spending_family_and_personal">Family and Personal</string>
    <string name="categories_spending_food">Food</string>

    <string name="categories_income">Incomes</string>
    <string name="categories_spending_day_job">Day Job</string>
    <string name="categories_spending_digital_asset_sales">Digital Asset Sales</string>
    <string name="categories_spending_content_creation">Content Creation</string>

    <!--    FEEDBACK DAILY SPENDING-->
    <string name="feedback_daily_spending_daily">Daily</string>
    <string name="feedback_daily_spending_total_spending">Total Spending</string>
    <string name="feedback_daily_spending_total_etb">ETB</string>
    <string name="feedback_daily_spending_total_time">Time</string>
    <string name="feedback_daily_spending_spending_item">Spending</string>
    <string name="feedback_daily_spending_spending_total_revenue">Total Revenue</string>

    <!--    FEEDBACK MONTHLY SPENDING-->
    <string name="feedback_monthly_spending_monthly">Monthly</string>
    <string name="feedback_monthly_spending_today">Today</string>
    <string name="feedback_monthly_spending_week">Week</string>
    <string name="feedback_monthly_spending_month">Month</string>
    <string name="feedback_monthly_spending_monthly_spendings">Monthly Spendings</string>
    <string name="feedback_monthly_spending_view_all">View All</string>

    <!--    TRANSACTION ITEM-->

    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_reason">Transaction reason</string>
    <string name="transaction_add">Add Transaction</string>

    <!--    FEEDBACK DAILY SPENDING-->
    <string name="feedback_total_spending">Total Spending</string>
    <string name="feedback_total_revenue">Total Revenue</string>

</resources>