<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUpActivity">

    <ImageView
        android:layout_width="695dp"
        android:layout_height="695dp"
        android:background="@drawable/ic_background_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/tv_signup_create_account"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/signup_create_an_account"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/signup_your_first_name"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_create_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signup_your_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusRight="@id/et_signup_phone_email" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:hint="@string/signup_phone_number_email"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signup_phone_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nextFocusRight="@string/signup_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:hint="@string/signup_password"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:nextFocusRight="@id/et_signup_confirm_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:hint="@string/signup_confirm_password"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:nextFocusRight="@id/cb_signup_i_agree_to_terms" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="405dp" />

    <CheckBox
        android:id="@+id/cb_signup_i_agree_to_terms"
        android:layout_width="285dp"
        android:layout_height="25dp"
        android:layout_marginTop="48dp"
        android:text="@string/signup_i_agree_to_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Button
        android:id="@+id/btn_signup_signup"
        android:layout_width="161dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/drawable_button_oval"
        android:text="@string/signup_signup"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_signup_i_agree_to_terms" />


</androidx.constraintlayout.widget.ConstraintLayout>