<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_welcome1_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="695dp"
        android:layout_height="695dp"
        android:background="@drawable/ic_background_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="center"
        android:background="@drawable/layout_forgot_password_picture_background" />

    <ImageView
        android:id="@+id/iv_puzzled_man"
        android:layout_width="120dp"
        android:layout_height="170dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forgot_password" />

    <TextView
        android:id="@+id/tv_welcome1_welcome"
        android:layout_width="325dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/fyp_forgot_your_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="324dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/fyp_enter_your_email"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome1_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/login_email"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeErrorColor="@android:color/holo_red_dark"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot_password_send_link"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/drawable_button_oval"
        android:text="@string/fyp_send_reset_link"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>



