<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_welcome1_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.Welcome1Activity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_32" />

    <TextView
        android:id="@+id/tv_welcome1_welcome"
        android:layout_width="324dp"
        android:layout_height="63dp"
        android:text="@string/welcome1_welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="53sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="33dp"
        android:text="@string/welcome1_qutebapp_is"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome1_welcome" />

    <TextView
        android:id="@+id/tv_page2"
        android:layout_width="8dp"
        android:layout_height="27dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="84dp"
        android:gravity="bottom|center"
        android:text="2"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_page3" />

    <TextView
        android:id="@+id/tv_page1"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_page2" />

    <TextView
        android:id="@+id/tv_page3"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="84dp"
        android:gravity="bottom|center"
        android:text="3"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_welcome1_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_page1" />


</androidx.constraintlayout.widget.ConstraintLayout>



