<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_welcome2_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".welcome.Welcome2Activity">

    <ImageView
        android:id="@+id/iv_puzzled_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_556" />

    <TextView
        android:id="@+id/tv_welcome2_we_got_you"
        android:layout_width="324sp"
        android:layout_height="63dp"
        android:text="@string/welcome2_we_got_you"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="53sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="295dp"
        android:layout_height="219dp"
        android:layout_marginTop="33dp"
        android:text="@string/welcome2_we_pay_attention"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome2_we_got_you" />

    <TextView
        android:id="@+id/tv_page2"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:gravity="bottom|center"
        android:text="2"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="84dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="620dp" />

    <TextView
        android:id="@+id/tv_page3"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="84dp"
        android:gravity="bottom|center"
        android:text="3"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_page2" />

    <TextView
        android:id="@+id/tv_page1"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:text="1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_page2" />

    <TextView
        android:id="@+id/tv_welcome2_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_page1" />

</androidx.constraintlayout.widget.ConstraintLayout>



