<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="49dp" />

    <ImageView
        android:id="@+id/iv_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_data_entry_background" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/login_phone_number_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_login_email" />

    <ImageView
        android:id="@+id/iv_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_data_entry_background" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_login_email" />

    <Button
        android:id="@+id/btn_login_sign_in"
        android:layout_width="161dp"
        android:layout_height="46dp"
        android:layout_marginTop="72dp"
        android:text="@string/login_sign_up"
        android:textColor="@color/white"
        android:background="@drawable/drawable_button_oval"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_password" />

    <TextView
        android:id="@+id/tv_login_dont_have_account"
        android:layout_width="172dp"
        android:layout_height="26dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="92dp"
        android:text="@string/login_dont_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_login_sign_up"
        android:layout_width="84dp"
        android:layout_height="26dp"
        android:layout_marginStart="176dp"
        android:layout_marginBottom="92dp"
        android:text="@string/login_sign_up"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>