<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".board.fragments.entryCategories.entities.SpendingTransactionEntry">

    <TextView
        android:id="@+id/tv_spending_category_name"
        android:layout_width="222dp"
        android:layout_height="52dp"
        android:text="CATEGORY NAME"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="695dp"
        android:layout_height="695dp"
        android:background="@drawable/ic_background_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="49dp" />

    <ImageView
        android:id="@+id/iv_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_data_entry_background" />

    <EditText
        android:id="@+id/et_spending_amount"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/transaction_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_login_email" />

    <EditText
        android:id="@+id/et_spending_reason"
        android:layout_width="301dp"
        android:layout_height="46dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/transaction_reason"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_login_email" />

    <ImageView
        android:id="@+id/iv_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_data_entry_background" />

    <Button
        android:id="@+id/btn_spending_add"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/drawable_button_oval"
        android:text="@string/transaction_add"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>